--- a/app/src/main/res/drawable/btn_rounded.xml
+++ b/app/src/main/res/drawable/btn_rounded.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="@color/colorPrimary"/>
-    <corners android:radius="24dp"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/colorPrimary"/>
+            <corners android:radius="24dp"/>
+            <stroke
+                android:width="1dp"
+                android:color="#a4a2a2">
+            </stroke>
+        </shape>
+    </item>
+</layer-list>
