--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimary">#45B54D</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#45B54D</color>
+    <color name="colorAccent">#FFFFFF</color>
 </resources>
