--- a/app/src/main/res/layout/fragment_util_information.xml
+++ b/app/src/main/res/layout/fragment_util_information.xml
@@ -22,9 +22,10 @@
         style="@style/Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Переработка"
+        android:text="@string/processing"
         android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
