--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -103,7 +103,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/auth_bottom"
+            android:background="@drawable/sign_button"
             android:fontFamily="@font/roboto_bold"
             android:text="@string/sing_up"
             android:textColor="@color/colorPrimary"
