--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -77,7 +77,7 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/auth_bottom"
+        android:background="@drawable/sign_button"
         android:fontFamily="@font/roboto_bold"
         android:text="@string/sing_in"
         android:textColor="@color/colorPrimary"
