--- a/app/src/main/res/drawable/btn_oval.xml
+++ b/app/src/main/res/drawable/btn_oval.xml
@@ -2,8 +2,9 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="@color/colorAccent"/>
             <corners android:radius="24dp"/>
+            <padding android:top="4dp" android:left="4dp" android:right="4dp"/>
             <stroke
                 android:width="1dp"
                 android:color="#a4a2a2">
