--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlNormal">@color/colorPrimaryDark</item>
+        <item name="colorControlActivated">@color/colorPrimaryDark</item>
     </style>
 
     <style name="SplashScreen" parent="AppTheme">
@@ -20,5 +22,13 @@
     <style name="Information">
         <item name="android:fontFamily">@font/roboto_bold</item>
         <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="InputField">
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/btn_oval</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:padding">4dp</item>
     </style>
 </resources>
