--- a/app/src/main/res/layout/fragment_util_information.xml
+++ b/app/src/main/res/layout/fragment_util_information.xml
@@ -28,6 +28,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_information_about_utils"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
