--- a/app/src/main/res/layout/util_view.xml
+++ b/app/src/main/res/layout/util_view.xml
@@ -12,7 +12,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/textView_util_name"
+            android:id="@+id/tv_util_name"
             style="@style/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -22,18 +22,18 @@
 
 
         <TextView
-            android:id="@+id/textView_util_description"
+            android:id="@+id/tv_util_description"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/roboto"
             android:maxLines="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_util_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_util_name"
             tools:text="@tools:sample/lorem/random" />
 
         <TextView
-            android:id="@+id/textView_bonuses"
+            android:id="@+id/tv_bonuses"
             style="@style/Information"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
             android:fontFamily="@font/roboto"
             android:maxLines="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_util_description"
+            app:layout_constraintTop_toBottomOf="@+id/tv_util_description"
             tools:text="@tools:sample/lorem/random" />
 
         <ImageView
