--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -60,6 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/profile_image" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rc_profile_options"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
