--- a/app/src/main/res/layout/option_view.xml
+++ b/app/src/main/res/layout/option_view.xml
@@ -12,7 +12,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/textView_option_name"
+            android:id="@+id/tv_option_name"
             android:layout_width="wrap_content"
             style="@style/Title"
             android:layout_height="wrap_content"
@@ -21,13 +21,13 @@
             tools:text="@tools:sample/full_names" />
 
         <TextView
-            android:id="@+id/textView_option_description"
+            android:id="@+id/tv_option_description"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/roboto"
             android:maxLines="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_option_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_option_name"
             tools:text="@tools:sample/lorem/random" />
 
         <Switch
@@ -36,8 +36,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Switch" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
