--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,12 +8,16 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
+        android:padding="8dp"
         android:layout_width="112dp"
         android:layout_height="112dp"
+        android:src="@drawable/avatar"
+        android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
+        android:layout_marginTop="24dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -23,14 +27,14 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView_fullName"
+            android:id="@+id/tv_fullName"
             style="@style/Title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="@tools:sample/full_names" />
 
         <TextView
-            android:id="@+id/textView_nickName"
+            android:id="@+id/tv_nickName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -39,7 +43,7 @@
             tools:text="@tools:sample/lorem" />
 
         <TextView
-            android:id="@+id/registration_date"
+            android:id="@+id/tv_registration_year"
             style="@style/Information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -68,6 +72,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/options_title"
         tools:itemCount="5"
-        tools:listitem="@layout/option_view" />
+        tools:listitem="@layout/option_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
